--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,7 +9,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Copy application code
 COPY . .
 
-# Cloud Run uses port 8080 by default
+# Cloud Run sets the PORT env var at runtime
+ENV PORT=8080
 EXPOSE 8080
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD sh -c "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
