fix: add system deps for shapely and pillow in Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,7 +2,14 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Install dependencies first for better layer caching
+# Install system dependencies needed by shapely (libgeos) and pillow
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libgeos-dev \
+    libjpeg62-turbo-dev \
+    zlib1g-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
